objects/Appraisal__c.object
<CustomObject>
    <fields>
        <fullName>Appraisal_Company__c</fullName>
        <formula>IF( Source__c ='3453649', 'Axis Appraisal Management Solutions', 
IF( Source__c ='5180293', 'ServiceLink', 
IF( Source__c ='4709283', 'ARIVS', 

'No Appraisal Company Found'
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Appraisal Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraisal_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Expiration__c</fullName>
        <description>Appraisal’s Expiration Date (120 Days following the Appraisal’s Effective Date)</description>
        <formula>Appraisal_Effective_Date__c + 120</formula>
        <inlineHelpText>Appraisal’s Expiration Date (120 Days following the Appraisal’s Effective Date)</inlineHelpText>
        <label>Appraisal Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_External_Id__c</fullName>
        <label>Appraisal External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraisal_Fee_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appraisal Fee Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Fee__c</fullName>
        <label>Appraisal Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraisal_Final_Value__c</fullName>
        <label>Final Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraisal_Genesis__c</fullName>
        <label>Appraisal Genesis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greenlight Requested</fullName>
                </value>
                <value>
                    <fullName>IA Requested</fullName>
                </value>
                <value>
                    <fullName>Client Requested</fullName>
                </value>
                <value>
                    <fullName>Client Provided</fullName>
                </value>
                <value>
                    <fullName>Lender Provided</fullName>
                </value>
                <value>
                    <fullName>Unison Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Order_Number__c</fullName>
        <label>Appraisal Order Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Ordered_Date__c</fullName>
        <label>Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appraisal_Status__c</fullName>
        <label>Appraisal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appraisal_Value_Designation__c</fullName>
        <label>Valuation Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As-Is</fullName>
                </value>
                <value>
                    <fullName>Subject-To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Basement_Bathroom_Count__c</fullName>
        <label>Basement Bathroom Count</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basement_Bedroom_Count__c</fullName>
        <label>Basement Bedroom Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basement_Finished_Sqft__c</fullName>
        <label>Basement Finished Sqft</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basement_Other_Room_Count__c</fullName>
        <label>Basement Other Room Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basement_Recreation_Count__c</fullName>
        <label>Basement Rec Room Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basement_Total_Sqft__c</fullName>
        <label>Basement Total Sqft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Opportunity__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comps_Analysis_Comments__c</fullName>
        <inlineHelpText>Please provide comments related to the comparable sales and adjustments</inlineHelpText>
        <label>Comps Analysis Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Method__c</fullName>
        <description>This field helps to controls the appraisal’s evaluation methodology.</description>
        <inlineHelpText>This field helps to controls the appraisal’s evaluation methodology.</inlineHelpText>
        <label>Evaluation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Is</fullName>
                    <default>true</default>
                    <label>As Is</label>
                </value>
                <value>
                    <fullName>Subject To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finished_Sqft__c</fullName>
        <label>Basement Finished Sqft</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MercuryTrackingId__c</fullName>
        <label>MercuryTrackingId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Appraisals</relationshipLabel>
        <relationshipName>Appraisals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Building_GLA__c</fullName>
        <label>Building GLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_City_c__c</fullName>
        <formula>Opportunity__r.Property_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Condition__c</fullName>
        <label>Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Condition</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Condo_PUD_Name__c</fullName>
        <description>Name of the Condominium or PUD for a given property. Parsed from Appraisal XML: deleting or otherwise altering this field might cause errors.</description>
        <inlineHelpText>Name of the Condominium or PUD for a given property as received from the Appraisal company.</inlineHelpText>
        <label>Condo/PUD Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_County__c</fullName>
        <formula>Opportunity__r.Property_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Flood_Zone__c</fullName>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Flood_Zone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_HOA_Amount__c</fullName>
        <label>HOA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_HOA_Frequency__c</fullName>
        <label>HOA Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Month</fullName>
                </value>
                <value>
                    <fullName>Per Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Land_Cost_Ratio__c</fullName>
        <formula>( Property_Land_Cost__c /  Appraisal_Final_Value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land:Cost Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Property_Land_Cost__c</fullName>
        <label>Land Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Lot_Size__c</fullName>
        <label>Lot Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Marketability__c</fullName>
        <inlineHelpText>Are there any featured or photos that indicate issues with the marketability of the property?Examples of near negative physical features include: close proximity to prison, power lines, waste dump, industrial area, etc</inlineHelpText>
        <label>Property Marketability</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acceptable Marketability</fullName>
                </value>
                <value>
                    <fullName>Accessory Unit</fullName>
                </value>
                <value>
                    <fullName>Actively Remodeling</fullName>
                </value>
                <value>
                    <fullName>Age-Restricted Community</fullName>
                </value>
                <value>
                    <fullName>Appraised 'Subject-To'</fullName>
                </value>
                <value>
                    <fullName>Atypical Architectural Design</fullName>
                </value>
                <value>
                    <fullName>Atypical Property Features</fullName>
                </value>
                <value>
                    <fullName>Atypical Property Type</fullName>
                </value>
                <value>
                    <fullName>Atypical Square Footage</fullName>
                </value>
                <value>
                    <fullName>Atypical Utilities</fullName>
                </value>
                <value>
                    <fullName>Bad Landscaping</fullName>
                </value>
                <value>
                    <fullName>Broken Window</fullName>
                </value>
                <value>
                    <fullName>Cohousing</fullName>
                </value>
                <value>
                    <fullName>Comp Sale Price Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Converting/Converted Room(s)</fullName>
                </value>
                <value>
                    <fullName>Cost to Cure Items</fullName>
                </value>
                <value>
                    <fullName>Custom Design</fullName>
                </value>
                <value>
                    <fullName>Direct Mail Blacklist</fullName>
                </value>
                <value>
                    <fullName>Energy Efficient</fullName>
                </value>
                <value>
                    <fullName>Finished Basement</fullName>
                </value>
                <value>
                    <fullName>Fresh Paint</fullName>
                </value>
                <value>
                    <fullName>Good Landscaping</fullName>
                </value>
                <value>
                    <fullName>High HOA Fees</fullName>
                </value>
                <value>
                    <fullName>Inferior Location</fullName>
                </value>
                <value>
                    <fullName>Major Cracks</fullName>
                </value>
                <value>
                    <fullName>Major Leak</fullName>
                </value>
                <value>
                    <fullName>Major Mold</fullName>
                </value>
                <value>
                    <fullName>Minor Cracks</fullName>
                </value>
                <value>
                    <fullName>Minor Leak</fullName>
                </value>
                <value>
                    <fullName>Minor Mold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Neighborhood_Name__c</fullName>
        <label>Neighborhood Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Rooms_Baths__c</fullName>
        <label>Bathrooms</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Rooms_Beds__c</fullName>
        <label>Bedrooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_State__c</fullName>
        <formula>Opportunity__r.Property_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Street_Number_and_Name__c</fullName>
        <formula>Opportunity__r.Property_Street_Number_and_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Street Number and Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Total_Rooms__c</fullName>
        <label>Total Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Property_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Year_Built__c</fullName>
        <label>Year Built</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zip_Code__c</fullName>
        <formula>Opportunity__r.Property_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Appraisals</relationshipLabel>
        <relationshipName>Appraisals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requirement</label>
        <referenceTo>Current_Conditions__c</referenceTo>
        <relationshipLabel>Appraisals</relationshipLabel>
        <relationshipName>Appraisals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Appraisal Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Notes__c</fullName>
        <label>Valuation Notes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal Above Estimate</fullName>
                </value>
                <value>
                    <fullName>Appraisal Above Recent Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Appraisal Below Estimate</fullName>
                </value>
                <value>
                    <fullName>Appraisal Below Recent Purchase Price</fullName>
                </value>
                <value>
                    <fullName>Appraised 10% Above Average AVM</fullName>
                </value>
                <value>
                    <fullName>Appraised 10% Below Average AVM</fullName>
                </value>
                <value>
                    <fullName>Appraised Above Listing</fullName>
                </value>
                <value>
                    <fullName>Appraised Below Listing</fullName>
                </value>
                <value>
                    <fullName>Area Lacks Similar Comparables</fullName>
                </value>
                <value>
                    <fullName>Area Lacks Sufficient Sale Volume</fullName>
                </value>
                <value>
                    <fullName>AVM Bed/Bath Discrepancy</fullName>
                </value>
                <value>
                    <fullName>AVM Misclassified Property Type</fullName>
                </value>
                <value>
                    <fullName>AVM Other Data Discrepancy</fullName>
                </value>
                <value>
                    <fullName>AVMs Missing Finished Basement</fullName>
                </value>
                <value>
                    <fullName>AVM SqFt Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Bad Adjustment</fullName>
                </value>
                <value>
                    <fullName>Bad Comparables</fullName>
                </value>
                <value>
                    <fullName>Basement Appraisal GLA Inclusion</fullName>
                </value>
                <value>
                    <fullName>Basement AVM GLA Inclusion</fullName>
                </value>
                <value>
                    <fullName>Basement GLA Discrepency</fullName>
                </value>
                <value>
                    <fullName>Correct Valuation</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Easy Valuation</fullName>
                </value>
                <value>
                    <fullName>Flipped Homes Used in Valuation</fullName>
                </value>
                <value>
                    <fullName>Good Comparables</fullName>
                </value>
                <value>
                    <fullName>Home's Condition Not Reflected in Value</fullName>
                </value>
                <value>
                    <fullName>Inferior Condition</fullName>
                </value>
                <value>
                    <fullName>Large AVM Std Dev</fullName>
                </value>
                <value>
                    <fullName>Low Valuation</fullName>
                </value>
                <value>
                    <fullName>Modular Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_appraisal_ordered__c</fullName>
        <formula>Opportunity__r.Second_Appraisal_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd appraisal ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>property_id__c</fullName>
        <formula>Opportunity__r.Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>property id</label>
        <type>Text</type>
    </fields>
    <label>Appraisal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MercuryTrackingId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appraisal_orders</fullName>
        <columns>NAME</columns>
        <columns>Property_Street_Number_and_Name__c</columns>
        <columns>X2nd_appraisal_ordered__c</columns>
        <columns>Property_City_c__c</columns>
        <columns>Property_State__c</columns>
        <columns>Property_Zip_Code__c</columns>
        <columns>Appraisal_Order_Number__c</columns>
        <columns>Appraisal_Fee__c</columns>
        <columns>Appraisal_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appraisal_Status__c</field>
            <operation>equals</operation>
            <value>Ordered</value>
        </filters>
        <label>Appraisal Ordered</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Appraisal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appraisals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Appraisal_Genesis_is_required</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(Appraisal_Status__c, 'Reviewed')   &amp;&amp;  ISBLANK( TEXT(Appraisal_Genesis__c))</errorConditionFormula>
        <errorMessage>Appraisal Genesis needs to be entered before setting Appraisal status as Reviewed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valuation_and_Property_Marketability_Req</fullName>
        <active>true</active>
        <description>Valuation and Property Marketability Required
Ticket: BUS-155110486</description>
        <errorConditionFormula>ISPICKVAL(Appraisal_Status__c, 'Reviewed') &amp;&amp;
(ISBLANK( Valuation_Notes__c ) ||
ISBLANK(  Property_Marketability__c ))</errorConditionFormula>
        <errorMessage>Please add Valuation and Marketability Notes before saving this Appraisal</errorMessage>
    </validationRules>
</CustomObject>